--- a/inst/exercises/reaction_transport/estuaryAnoxia/estuaryAnoxia_A.Rmd
+++ b/inst/exercises/reaction_transport/estuaryAnoxia/estuaryAnoxia_A.Rmd
@@ -14,9 +14,10 @@ output:
 
 The mass balances for ammonia ($NH_3$), nitrate ($NO_3^-$) and oxygen ($O_2$) can be written as the following differential equations: 
 
-$$\frac{\partial [NO_3^-]}{\partial t} = D\frac{\partial^2 [NO_3^-]}{\partial x^2 } - v\frac{\partial [NO_3^-]}{\partial x } + Nitrification$$
-$$\frac{\partial [NH_3]}{\partial t} = D\frac{\partial^2 [NH_3]}{\partial x^2 } - v\frac{\partial [NH_3]}{\partial x } - Nitrification$$
-$$\frac{\partial [O_2]}{\partial t} = D\frac{\partial^2 [O_2]}{\partial x^2 } - v\frac{\partial [O_2]}{\partial x } + Aeration - 2 \cdot Nitrification$$
+$$\frac{\partial [NO_3^-]}{\partial t} = D\cdot \frac{\partial^2 [NO_3^-]}{\partial x^2 } - v\cdot \frac{\partial [NO_3^-]}{\partial x } + Nitrification$$
+$$\frac{\partial [NH_3]}{\partial t} = D\cdot \frac{\partial^2 [NH_3]}{\partial x^2 } - v\cdot \frac{\partial [NH_3]}{\partial x } - Nitrification$$
+$$\frac{\partial [O_2]}{\partial t} = D\cdot \frac{\partial^2 [O_2]}{\partial x^2 } - v\cdot \frac{\partial [O_2]}{\partial x } + Aeration - 2 \cdot Nitrification$$
+
 Here, $D$ is the dispersion coefficient due to tidal mixing, and $v$ is the advective velocity (in $m~s^{-1}$), calculated from the discharge (*Q*) and cross-sectional area (*A*) as $v=Q/A$. Thus, the 1st and 2nd term in the differential equations describe the rate of change due to transport by dispersion (diffusion-like) and advection, respectively. Note that the parameters characterizing the magnitude of this change are the *same* for each component, which is because all components are *dissolved* substances affected in the same way by the water flow. Also note that we assumed that $D$ and $u$ are *not* varying along the estuary, which is why we could take them out of the spatial derivatives.
 
 The boundary conditions at the upper boundary (river side): $[O_2]_{x=0} = 0.1$, $[NO_3^-]_{x=0} = 0.3$, $[NH_3]_{x=0} = 0.1$.
@@ -34,7 +35,7 @@ state <- c(O2=0.1, NO3=0.3, NH3=0.1)
 
 This made it easy to refer to the state variables in the model function using the \texttt{with(as.list(...} function. 
 
-In models with transport, each state variable is a *vector* by itself! Thus, this "trick" is *no longer* possible. Instead, we concatenate the vectors for each state variable into a *long* vector called *state*, and then "unpack" the individual vectors from this variable within the model function.
+In models with transport, each state variable is a *vector* by itself! Thus, this "trick" is *no longer* possible. Instead, we concatenate the vectors for each state variable into a *long* vector called ``state``, and then "unpack" the individual vectors from this variable within the model function. We will assign the initial values of the state variables into a vector called ``state.ini``.
 
 ```{r, eval = TRUE, cache = FALSE, echo = TRUE, warning=FALSE, message=FALSE}
 require(ReacTran)  # package with solution methods
@@ -42,19 +43,18 @@ require(ReacTran)  # package with solution methods
 # Note: units are: m, days, mol/m3.
 
 # model grid
-Length  <- 100000                                # m
-N       <- 500                                   # - number of boxes
-dx      <- Length/N                              # m grid size
-x       <- seq(dx/2, by = dx, length.out = N)    # m position of cells
-Area    <- 20000                                 # m2, cross-sectional area of the estuary
-day2sec <- 24*3600                               # number of seconds in a day
+Length  <- 100000                           # m, domain length
+N       <- 500                              # -, number of boxes
+Grid    <- setup.grid.1D(L = Length, N = N) # grid of equally sized boxes
+Area    <- 20000                            # m2, cross-sectional area of the estuary
+day2sec <- 24*3600                          # number of seconds in a day
 
 # State variables, each is a vector of length=N - initial concentrations set to 0
-Oxygen  <- rep(0, times = N)
-Nitrate <- rep(0, times = N)
-Ammonia <- rep(0, times = N)
-state <- c(Oxygen, Nitrate, Ammonia)
-SVnames <- c("Oxygen", "Nitrate", "Ammonia")
+Oxygen    <- rep(0, times = N)
+Nitrate   <- rep(0, times = N)
+Ammonia   <- rep(0, times = N)
+state.ini <- c(Oxygen, Nitrate, Ammonia)
+SVnames   <- c("Oxygen", "Nitrate", "Ammonia")
 
 # model parameters
 pars <- c(                                      
@@ -74,27 +74,27 @@ pars <- c(
 )
 
 # Model function
-Scheldt1D <- function(t, C, pars) {           # C is a LONG vector of state variables
- with (as.list(pars),{
+Scheldt1D <- function(t, state, pars) {   # state is a LONG vector of state variables
+  with(as.list(pars),{
 
-   # here we "unpack" the vectors of individual state variables from the LONG input vector
-    Oxygen  <- C[     1  :    N]
-    Nitrate <- C[  (N+1) : (2*N)] # note parentheses around (N+1) and (2*N)!!
-    Ammonia <- C[(2*N+1) : (3*N)]
+    # here we "unpack" the vectors of individual state variables from the LONG input vector
+    Oxygen  <- state[(0*N+1) : (1*N)] # note parentheses around (0*N+1) and (1*N)!!
+    Nitrate <- state[(1*N+1) : (2*N)]
+    Ammonia <- state[(2*N+1) : (3*N)]
     
     # Transport - tran.1D solves the "transport terms" (spatial derivatives).
     # It also implements the boundary conditions!
     TranOxygen <- tran.1D(C = Oxygen,
               C.up = riverO2, C.down = seaO2,  # upstream and downstream concentrations
-              D = Ddisp, v = v, dx = dx)
+              D = Ddisp, v = v, dx = Grid)
 
     TranNitrate <- tran.1D(C = Nitrate,
               C.up = riverNit, C.down = seaNit,
-              D = Ddisp, v = v, dx = dx)
+              D = Ddisp, v = v, dx = Grid)
 
     TranAmmonia <- tran.1D(C = Ammonia,
               C.up = riverAmm, C.down = seaAmm,
-              D = Ddisp, v = v, dx = dx)
+              D = Ddisp, v = v, dx = Grid)
 
     # Nitrification rate (calculated in every location)
     Nitrification   <- rnitri * Ammonia * Oxygen/(Oxygen+ksO2)
@@ -103,26 +103,27 @@ Scheldt1D <- function(t, C, pars) {           # C is a LONG vector of state vari
     Aeration <- -piston/depth * (Oxygen - O2sat)
 
     # the rates of change = transport + net reaction
-    dNitrate  <- TranNitrate$dC  + Nitrification 
-    dAmmonia  <- TranAmmonia$dC  - Nitrification
-    dOxygen   <- TranOxygen$dC   - 2*Nitrification + Aeration
+    dNitrate.dt  <- TranNitrate$dC  + Nitrification 
+    dAmmonia.dt  <- TranAmmonia$dC  - Nitrification
+    dOxygen.dt   <- TranOxygen$dC   - 2*Nitrification + Aeration
     
-    list(c(dOxygen, dNitrate, dAmmonia),   # the rates of change
-           TotalNitrogen = mean(Nitrate + Ammonia),  
+    return(list(c(dOxygen.dt, dNitrate.dt, dAmmonia.dt),   # the rates of change
+           TotalNitrogen  = mean(Nitrate + Ammonia),  
            Nitrification  = Nitrification, 
-           Aeration = Aeration,
-           NH3influx = TranAmmonia$flux.up,
-           NO3influx = TranNitrate$flux.up,
-           O2influx  = TranOxygen$flux.up,
-           NH3efflux = TranAmmonia$flux.down,
-           NO3efflux = TranNitrate$flux.down,
-           O2efflux  = TranOxygen$flux.down,
-           # total fluxes in+out and integrated rates
-           TotNinflux = TranAmmonia$flux.up + TranNitrate$flux.up,
-           TotNefflux = TranAmmonia$flux.down + TranNitrate$flux.down,
-           TotalNitrification = sum(Nitrification * dx),
-           TotalAeration    = sum(Aeration*dx)
-          )
+           Aeration       = Aeration,
+           NH3influx      = TranAmmonia$flux.up,
+           NO3influx      = TranNitrate$flux.up,
+           O2influx       = TranOxygen$flux.up,
+           NH3efflux      = TranAmmonia$flux.down,
+           NO3efflux      = TranNitrate$flux.down,
+           O2efflux       = TranOxygen$flux.down,
+           # total fluxes in+out at model boundaries
+           TotNinflux     = TranAmmonia$flux.up + TranNitrate$flux.up,
+           TotNefflux     = TranAmmonia$flux.down + TranNitrate$flux.down,
+           # integrated rates along the modeled domain
+           TotalNitrification = sum(Nitrification * Grid$dx),
+           TotalAeration      = sum(Aeration      * Grid$dx)
+          ))
     })
 }
 ``` 
@@ -132,28 +133,28 @@ Scheldt1D <- function(t, C, pars) {           # C is a LONG vector of state vari
 We estimate the steady-state solution for the current situation and for the 1970s.
 
 ```{r, fig.height = 8, fig.width = 8}
-Scheldt00 <- steady.1D(y = state, parms = pars, func = Scheldt1D, positive = TRUE,
+Scheldt00 <- steady.1D(y = state.ini, parms = pars, func = Scheldt1D, positive = TRUE,
                   nspec = length(SVnames), dimens = N, names = SVnames)
 
 # The parameters for the 1970s
 par70 <- pars
-par70["riverNit"] <- 0.05    # river nitrate conc
-par70["seaNit"]   <- 0.02    # marine nitrate conc
-par70["riverAmm"] <- 0.60    # river ammonium conc
-par70["seaAmm"]   <- 0.02    # marine ammonium conc
+par70["riverNit"] <- 0.05    # river nitrate concentration
+par70["seaNit"]   <- 0.02    # marine nitrate concentration
+par70["riverAmm"] <- 0.60    # river ammonium concentration
+par70["seaAmm"]   <- 0.02    # marine ammonium concentration
 
-Scheldt70 <- steady.1D(y = state, parms = par70, func = Scheldt1D, positive = TRUE,
+Scheldt70 <- steady.1D(y = state.ini, parms = par70, func = Scheldt1D, positive = TRUE,
                   nspec = length(SVnames), dimens = N, names = SVnames)
 ```
 
 ```{r, fig.height = 7, fig.width = 10}
-plot(Scheldt00, Scheldt70, grid=x/1000, lwd=2, lty=1, 
+plot(Scheldt00, Scheldt70, grid=Grid$x.mid/1000, lwd=2, lty=1, 
      mfrow=c(2,3), ylab="mol/m3", xlab="distance (km)")
-plot(Scheldt00, Scheldt70, grid=x/1000, lwd=2, lty=1, mfrow=NULL, 
+plot(Scheldt00, Scheldt70, grid=Grid$x.mid/1000, lwd=2, lty=1, mfrow=NULL, 
      which = "Nitrification", ylab="molN/m3/d", xlab="distance (km)")
-legend("topright", legend = c("current", "1970s"), lty = 1, col = 1:2)
-plot(Scheldt00, Scheldt70, grid=x/1000, lwd=2, lty=1, mfrow=NULL, 
+plot(Scheldt00, Scheldt70, grid=Grid$x.mid/1000, lwd=2, lty=1, mfrow=NULL, 
      which = "Aeration", ylab="molO2/m3/d", xlab="distance (km)")
+legend("topright", legend = c("current", "1970s"), lty=1, lwd=2, col=1:2, bty="n")
 ```
 
 
@@ -177,23 +178,25 @@ knitr::kable(BUDGET, digits = 0)
 
 The sensitivity analysis is run using a for-loop, where the minimal value in the steady state solution is found for each run of the loop.
 
-```{r, fig.height=4, fig.width=5}
+```{r}
 Sens <- function(NH3up){
- parsNH3 <- pars
- parsNH3["riverAmm"] <- NH3up   # river ammonium conc
- ScheldtNH3 <- steady.1D(y = state, parms = parsNH3, func = Scheldt1D, positive = TRUE,
-                  nspec = length(SVnames), dimens = N, names = SVnames)
- return(min(ScheldtNH3$y[,"Oxygen"]))
+  parsNH3 <- pars
+  parsNH3["riverAmm"] <- NH3up   # river ammonium conc
+  ScheldtNH3 <- steady.1D(y = state.ini, parms = parsNH3, func = Scheldt1D, 
+                          positive = TRUE, nspec = length(SVnames), 
+                          dimens = N, names = SVnames)
+  return(min(ScheldtNH3$y[,"Oxygen"]))
 }
 
 NH3_vect <- seq(from = 0, to = 0.8, by = 0.04)
-O2_vect  <- NULL
+O2_vect  <- NULL # initialize to an "empty vector"
 
-# use for-loop to find the minimal O2 concentration for each value in NH3_vect
+# use a for-loop to find the minimal O2 concentration for each value in NH3_vect
 for (NH3up in NH3_vect) 
-   O2_vect <- c(O2_vect, Sens(NH3up))
+   O2_vect <- c(O2_vect, Sens(NH3up)) # add a value in every step of the loop
+```
 
+```{r, fig.height=4, fig.width=5, fig.align='center'}
 plot(NH3_vect, O2_vect, type="b", xlab = "upstream NH3 concentration, [molN/m3]", 
   ylab = "O2, [molO2/m3]", main = "Minimal O2 concentration in the estuary")
 ```
-
